--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -304,7 +304,13 @@
 
 
 <div class="image-card" role="main">
-  <p class="image-info" ngIg="image">{{image.date}}</p>
+  <div class="image-info">
+    <mat-form-field class="image-info">
+      <input matInput [matDatepicker]="picker" placeholder="{{image.date}}"(dateInput)="getImage($event.value)" (dateChange)="getImage($event.value)">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </div>
   <img class="image-size" alt="ima" [src]="image.url"/>
   <p class="image-info">Copyright: {{image.copyright}}</p>
   
